# cooc

./: .gitignore  README.md  pyproject.toml
examples/: decomposition.ipynb  intro.ipynb  test_df.parquet  tradedecomp.ipynb
scripts/: rename.py
src/cooc/: __init__.py  classify.py  features.py  label.py  plots.py  polars_extensions.py  utils.py
src/cooc/hdb/: base.py  tardis_dataloader.py
src/tradedecomp/: __init__.py  plots.py  polars_extensions.py  tradeclass.py  utils.py
src/tradedecomp/hdb/: __init__.py  base.py  registry.py  trnk_dataloader.py  utils.py
tests/: test_classify.py
